# BSplineDemo

./: .gitmodules  CMakeLists.txt  README.MD  build.sh
.github/workflows/: deploy-emscripten-project  deploy-emscripten-project.yml
src/: Shader.hpp  Vec.hpp  main.cpp
src/shader/: fragment_shader.frag
